--- a/TODO
+++ b/TODO
@@ -38,6 +38,9 @@ just generate a key at startup,
 TODO implement rate limiting for irc.privmsg to stop the bot being killed due to flood
 i suggest creating a thread that only dispatches/writes to the irc socket
 
+TODO have an option for sendpayment.py take advantage of the small orders posted
+by patientsendpayment.py
+
 TODO sort out the nick = nick + '_' stuff in irclib
 its not a good way of doing it
 
